# agile

./: COPYING  LICENSE  meson.build
data/: com.github.altrem.agile.appdata.xml  com.github.altrem.agile.desktop
debian/: changelog  control  copyright
src/: Application.vala
src/Core/: Board.vala  Column.vala
src/Services/: BoardService.vala
src/Utils/: CollectionUtils.vala
src/Widgets/: HeaderBar.vala  MainWindow.vala  WelcomeView.vala
